<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="submitButtonClicked"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Cancel"
        app:layout_constraintTop_toBottomOf="@+id/Comment" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="cancelButtonClicked"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/Submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Comment" />

    <EditText
        android:id="@+id/Comment"
        android:layout_width="346dp"
        android:layout_height="108dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="336dp"
        android:layout_height="120dp"
        android:layout_marginTop="44dp"
        android:text="@string/Fall_Message"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="291dp"
        android:layout_height="96dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <RadioButton
            android:id="@+id/TP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TP" />

        <RadioButton
            android:id="@+id/FP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FP" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>